--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "node": "^19.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "scaleway": "^0.8.0",
     "scaleway-api": "^1.0.0",
+    "scaleway-api-client": "^2.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
